# HalideAndroidExample

./: settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/generator/: CMakeLists.txt  dummy.cpp  sampleGenerator.cpp
app/src/main/java/com/example/halideandroidexample/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
